# local-rag-agents

./: README.md
agentic-rag-chat/: .gitignore  README.md  main.py  pyproject.toml
agentic-rag-chat/app/: frontend.py  llm.py  main.py
agentic-rag-chat/config/: settings.py
agentic-rag-chat/ingestion/: pipeline.py
agentic-rag-chat/ingestion/chunking/: base.py  code.py  factory.py  markdown.py
agentic-rag-chat/ingestion/loaders/: code_loader.py  docling_loader.py  text_loader.py
agentic-rag-chat/ingestion/metadata/: schema.py
agentic-rag-chat/scripts/: test_api.py  test_ingestion.py  verify_txt_fix.py
agentic-rag-chat/vector_store/: embeddings.py  manager.py
custom-rag/: .env  .gitignore  README.md  chatbot-stream.py  data-embedding.py
docling-rag-agent/: .gitignore  ingestion.py  pyproject.toml  rag-agent.py
docling-rag-agent/ingestion/: ingestion.py
langchain-basics/: README.md  custom-middleware.py  dynamic-model.py  main.py  middleware.py  multi-modal.py  pyproject.toml  simple-rag.py  usage-cost.py
wiki-rag/: .gitignore  README.md  chunking_embedding_ingestion.py  keywords.xlsx  scraping-wiki.py
